Fixed ubuntu font not showing up

--- a/www/less/theme.less
+++ b/www/less/theme.less
@@ -1,5 +1,5 @@
 .h1, .h2, .h3, .h4, body, h1, h2, h3, h4, h5, h6 {
-  font-family: 'Ubuntu', sans-serif;
+  font-family: 'Ubuntu', sans-serif !important;
 }
 
 .icon {
